# molgen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/evaluation/: qm9_evaluate.yaml
configs/generation/: qm9_flow_generate.yaml  qm9_generate.yaml
configs/training/: qm9.yaml  qm9_dit.yaml  qm9_flow.yaml  qm9_flow_graphdist.yaml  qm9_flow_relbias.yaml  qm9_flow_rope.yaml  qm9_flow_sinusoidal.yaml  qm9_flow_test.yaml  qm9_pairformer.yaml  qm9_pairformer_minimal.yaml  qm9_pairformer_no_triattn.yaml  qm9_pairformer_trimult.yaml  qm9_pairmixer.yaml  qm9_pairmixer_toy.yaml  zinc.yaml  zinc_dit.yaml  zinc_flow.yaml  zinc_pairformer.yaml  zinc_pairmixer.yaml
docs/: closing_after_compact.txt
scripts/evaluation/: evaluate_qm9.sh  generate_qm9.sh  generate_qm9_flow.sh
scripts/training/: train_qm9.sh  train_qm9_dit.sh  train_qm9_flow.sh  train_qm9_flow_graphdist.sh  train_qm9_flow_relbias.sh  train_qm9_flow_rope.sh  train_qm9_flow_sinusoidal.sh  train_qm9_pairformer.sh  train_qm9_pairformer_minimal.sh  train_qm9_pairformer_trimult.sh  train_qm9_pairmixer.sh  train_zinc.sh  train_zinc_dit.sh  train_zinc_flow.sh  train_zinc_pairformer.sh  train_zinc_pairmixer.sh
src/: utils.py
src/data/: __init__.py  dataset.py  graph.py  tokenizer.py
src/models/: __init__.py  dit.py  flow_matching.py  lstm.py  pairformer.py  pairformer_flow.py  pairmixer.py  positional.py
src/scripts/: __init__.py  evaluate.py  generate.py  generate_flow.py  preprocess_dataset.py  train.py  train_flow.py
